--- a/overlay/style.scss
+++ b/overlay/style.scss
@@ -99,8 +99,14 @@ main {
   }
 }
 
+#shoots {
+  display: flex;
+  margin: auto 3vh 0;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
 .bamboo {
-  position: absolute;
   font-size: 0;
   width: 14px;
   box-sizing: border-box;
