--- a/overlay/style.scss
+++ b/overlay/style.scss
@@ -4,6 +4,7 @@ $green-dark: #509D56;
 $green-light: #60BC67;
 $light-dark: #F5F7FA;
 $key-fill: #0f0;
+$sprite-size: 128px;
 
 $bamboo-segment: $green-light;
 $bamboo-joint: $green-dark;
@@ -34,6 +35,7 @@ main {
   }
 
   section {
+    position: relative;
     flex-direction: column;
   }
 }
@@ -111,6 +113,7 @@ main {
   width: 14px;
   box-sizing: border-box;
   transform-origin: 50% 100%;
+  filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
 
   .joint {
     position: relative;
@@ -196,5 +199,64 @@ main {
         transform: rotate(-60deg) scaleX(0.7);
       }
     }
+  }
+}
+
+#panda {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: url('panda.png');
+  background-size: (5 * $sprite-size) (8 * $sprite-size);
+  background-position: 0 0;
+  width: $sprite-size;
+  height: $sprite-size;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  z-index: 5;
+  filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
+
+  &.sitting {
+    bottom: $sprite-size * -0.03125;
+    animation: 1s sitting infinite steps(1);
+  }
+
+  &.eating {
+    bottom: $sprite-size * -0.03125;
+    background-position: 0 -200%;
+  }
+
+  &.walking {
+    bottom: $sprite-size * -0.0625;
+    animation: 1.2s walking infinite steps(1);
+
+    &.left {
+      transform: scaleX(-100%);
+    }
+  }
+}
+
+@keyframes sitting {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: -100% 0;
+  }
+}
+
+@keyframes walking {
+  0% {
+    background-position: 0 -300%;
+  }
+  25% {
+    background-position: -100% -300%;
+  }
+  50% {
+    background-position: 0 -300%;
+  }
+  75% {
+    background-position: -200% -300%;
   }
 }
