--- a/overlay/style.scss
+++ b/overlay/style.scss
@@ -1,321 +1,3 @@
-$dark-dark: #212529;
-$dark-light: #383f45;
-$green-dark: #509D56;
-$green-light: #60BC67;
-$light-dark: #F5F7FA;
-$key-fill: #0f0;
-$sprite-size: 96px;
-$cloud-height: 8vh;
-
-$bamboo-segment: $green-light;
-$bamboo-joint: $green-dark;
-$bamboo-leaf: $green-dark;
-$bamboo-leaf-light: $green-light;
-$social-icon: $green-light;
-
-@import url('https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
-
-html,
-body {
-  background: $key-fill;
-  color: $light-dark;
-  height: 100vh;
-  overflow: hidden;
-}
-
-main {
-  flex-direction: row;
-  flex-wrap: nowrap;
-
-  &,
-  section {
-    display: flex;
-    height: 100%;
-  }
-
-  section {
-    position: relative;
-    flex-direction: column;
-  }
-}
-
-.bg-fill {
-  background: $dark-light;
-  flex-grow: 1;
-  overflow: hidden;
-}
-
-#title {
-  font-size: 8vh;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 600;
-  line-height: 1;
-  margin: 1vh 2vh 0;
-}
-
-#socials {
-  display: flex;
-  flex-direction: row;
-  margin: 1vh 2vh 0;
-  font-size: 3vh;
-
-  > div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 4vh 0 0;
-    font-size: inherit;
-
-    > i {
-      font-size: 1em;
-      margin: 0 1vh 0 0;
-      color: $social-icon;
-    }
-
-    > span {
-      font-size: .8em;
-      font-family: 'Nunito', sans-serif;
-    }
-  }
-}
-
-#text {
-  font-size: 3vh;
-  margin: 3vh 3vh $cloud-height;
-  padding: 0 0 2vh;
-  position: relative;
-
-  &:after {
-    content: '';
-    background: url('cloud.png') repeat-x;
-    background-size: auto 100%;
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
-    display: block;
-    height: $cloud-height;
-    position: absolute;
-    bottom: -$cloud-height;
-    left: -3vh;
-    right: -3vh;
-    filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-  }
-
-  #subtitle {
-    font-size: 6vh;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    line-height: 1;
-    margin: 0 0 1vh;
-  }
-
-  p {
-    font-size: inherit;
-    font-family: 'Nunito', sans-serif;
-    line-height: 1.15;
-    margin: 0 0 1vh;
-  }
-}
-
-#screen {
-  position: relative;
-
-  .bamboo {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    transform: translateX(50%);
-    z-index: 3;
-
-    &.left {
-      z-index: 2;
-      filter: brightness(85%);
-      transform: rotate(-5deg) translateX(50%) translateX(-5px);
-    }
-
-    &.right {
-      z-index: 1;
-      filter: brightness(70%);
-      transform: rotate(5deg) translateX(50%) translateX(5px);
-    }
-  }
-}
-
-#shoots {
-  display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  margin: 0 3vh 0;
-  justify-content: space-evenly;
-  align-items: flex-end;
-}
-
-.bamboo {
-  font-size: 0;
-  width: 14px;
-  box-sizing: border-box;
-  transform-origin: 50% 100%;
-  filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-
-  .joint {
-    position: relative;
-    background: $bamboo-segment;
-    width: calc(100% - 6px);
-    height: 80px;
-    margin: auto;
-
-    &:first-child {
-      margin-top: 3px;
-    }
-
-    &:before,
-    &:after {
-      position: absolute;
-      content: "";
-      width: calc(100% + 3px);
-      height: 6px;
-      border-radius: 3px;
-      background: $bamboo-joint;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1;
-    }
-
-    &:before {
-      top: 0%;
-    }
-
-    &:after {
-      top: 100%;
-    }
-
-    .leaf {
-      position: absolute;
-      width: 21px;
-      height: 43px;
-      transform-origin: 50% 100%;
-      bottom: 0;
-
-      &:before {
-        content: "";
-        position: relative;
-        display: block;
-        width: 30px;
-        height: 30px;
-        border-radius: 100% 0;
-        background: $bamboo-leaf;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotate(-45deg);
-      }
-
-      &.light {
-        &:before {
-          background: $bamboo-leaf-light;
-        }
-      }
-
-      &.right30,
-      &.right60 {
-        left: -5px;
-      }
-
-      &.right30 {
-        transform: rotate(30deg) scaleX(0.7);
-      }
-
-      &.right60 {
-        transform: rotate(60deg) scaleX(0.7);
-      }
-
-      &.left30,
-      &.left60 {
-        right: -5px;
-      }
-
-      &.left30 {
-        transform: rotate(-30deg) scaleX(0.7);
-      }
-
-      &.left60 {
-        transform: rotate(-60deg) scaleX(0.7);
-      }
-    }
-  }
-}
-
-#panda {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-image: url('panda.png');
-  background-size: (5 * $sprite-size) (8 * $sprite-size);
-  background-position: 0 0;
-  width: $sprite-size;
-  height: $sprite-size;
-  image-rendering: pixelated;
-  image-rendering: -moz-crisp-edges;
-  image-rendering: crisp-edges;
-  z-index: 5;
-  filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-
-  &.sitting {
-    bottom: $sprite-size * -0.03125;
-    animation: 1s sitting infinite steps(1);
-  }
-
-  &.eating {
-    bottom: $sprite-size * -0.03125;
-    background-position: 0 -200%;
-  }
-
-  &.walking {
-    bottom: $sprite-size * -0.0625;
-    animation: 1.2s walking infinite steps(1);
-
-    &.left {
-      animation: 1.2s walking-left infinite steps(1);
-    }
-  }
-}
-
-@keyframes sitting {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: -100% 0;
-  }
-}
-
-@keyframes walking {
-  0% {
-    background-position: 0 -300%;
-  }
-  25% {
-    background-position: -100% -300%;
-  }
-  50% {
-    background-position: 0 -300%;
-  }
-  75% {
-    background-position: -200% -300%;
-  }
-}
-
-@keyframes walking-left {
-  0% {
-    background-position: 0 -500%;
-  }
-  25% {
-    background-position: -100% -500%;
-  }
-  50% {
-    background-position: 0 -500%;
-  }
-  75% {
-    background-position: -200% -500%;
-  }
-}
+@import "style/globals";
+@import "style/main";
+@import "style/title";
