--- a/overlay/style/_title.scss
+++ b/overlay/style/_title.scss
@@ -7,12 +7,17 @@ main.overlay-title {
 
   #title,
   #socials {
-    margin: 3vh;
     filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
     z-index: 1;
   }
 
+  #title {
+    margin: 3vh;
+  }
+
   #socials {
+    margin: 0 3vh 12vh;
+
     > div {
       &:last-child {
         margin-right: 0;
