Subtitle on title overlay

--- a/overlay/style/_globals.scss
+++ b/overlay/style/_globals.scss
@@ -30,7 +30,13 @@ body {
   font-family: 'Nunito', sans-serif;
   font-weight: 600;
   line-height: 1;
-  margin: 1vh 2vh 0;
+}
+
+#subtitle {
+  font-size: 6vh;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 600;
+  line-height: 1;
 }
 
 #socials {
