--- a/overlay/style/_title.scss
+++ b/overlay/style/_title.scss
@@ -43,6 +43,10 @@ main.overlay-title {
     margin: 3vh;
   }
 
+  #subtitle {
+    margin: 0 3vh 3vh;
+  }
+
   #socials {
     margin: 0 3vh 18vh;
 
