--- a/overlay/style/_title.scss
+++ b/overlay/style/_title.scss
@@ -34,6 +34,7 @@ main.overlay-title {
   }
 
   #title,
+  #subtitle,
   #socials {
     filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
     z-index: 1;
