Use pet panda for bamboo divider

--- a/overlay/style/_main.scss
+++ b/overlay/style/_main.scss
@@ -61,7 +61,7 @@ main.overlay-main {
   #screen {
     position: relative;
 
-    .bamboo {
+    .pet-panda-bamboo {
       position: absolute;
       bottom: 0;
       right: 0;
