--- a/overlay/style/_globals.scss
+++ b/overlay/style/_globals.scss
@@ -65,96 +65,8 @@ body {
   }
 }
 
-//.bamboo {
-//  font-size: 0;
-//  width: 14px;
-//  box-sizing: border-box;
-//  transform-origin: 50% 100%;
-//  filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-//
-//  .joint {
-//    position: relative;
-//    background: $bamboo-segment;
-//    width: calc(100% - 6px);
-//    height: 80px;
-//    margin: auto;
-//
-//    &:first-child {
-//      margin-top: 3px;
-//    }
-//
-//    &:before,
-//    &:after {
-//      position: absolute;
-//      content: "";
-//      width: calc(100% + 3px);
-//      height: 6px;
-//      border-radius: 3px;
-//      background: $bamboo-joint;
-//      left: 50%;
-//      transform: translate(-50%, -50%);
-//      z-index: 1;
-//    }
-//
-//    &:before {
-//      top: 0%;
-//    }
-//
-//    &:after {
-//      top: 100%;
-//    }
-//
-//    .leaf {
-//      position: absolute;
-//      width: 21px;
-//      height: 43px;
-//      transform-origin: 50% 100%;
-//      bottom: 0;
-//
-//      &:before {
-//        content: "";
-//        position: relative;
-//        display: block;
-//        width: 30px;
-//        height: 30px;
-//        border-radius: 100% 0;
-//        background: $bamboo-leaf;
-//        top: 50%;
-//        left: 50%;
-//        transform: translate(-50%, -50%) rotate(-45deg);
-//      }
-//
-//      &.light {
-//        &:before {
-//          background: $bamboo-leaf-light;
-//        }
-//      }
-//
-//      &.right30,
-//      &.right60 {
-//        left: -5px;
-//      }
-//
-//      &.right30 {
-//        transform: rotate(30deg) scaleX(0.7);
-//      }
-//
-//      &.right60 {
-//        transform: rotate(60deg) scaleX(0.7);
-//      }
-//
-//      &.left30,
-//      &.left60 {
-//        right: -5px;
-//      }
-//
-//      &.left30 {
-//        transform: rotate(-30deg) scaleX(0.7);
-//      }
-//
-//      &.left60 {
-//        transform: rotate(-60deg) scaleX(0.7);
-//      }
-//    }
-//  }
-//}
+#panda {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
