--- a/overlay/style/_main.scss
+++ b/overlay/style/_main.scss
@@ -52,7 +52,7 @@ main.overlay-main {
 
     p {
       font-size: inherit;
-      font-family: 'Nunito', sans-serif;
+      font-family: $font;
       line-height: 1.15;
       margin: 0 0 1vh;
     }
