--- a/overlay/style/_main.scss
+++ b/overlay/style/_main.scss
@@ -61,6 +61,64 @@ main.overlay-main {
   #screen {
     position: relative;
 
+    $pixel: 0.5em;
+
+    .glitch {
+      position: absolute;
+      filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
+
+      &::before,
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: $pixel;
+        height: $pixel;
+      }
+
+      &:nth-of-type(1) {
+        width: $pixel * 5;
+        height: $pixel;
+        background: $green-light;
+        left: $pixel * 2;
+        top: $pixel * -0.5;
+
+        &::before {
+          background: $light;
+          right: $pixel * -1;
+          bottom: $pixel * -1;
+        }
+
+        &::after {
+          background: $green-dark;
+          right: $pixel * -2;
+          bottom: 0;
+        }
+      }
+
+      &:nth-of-type(2) {
+        width: $pixel;
+        height: $pixel;
+        background: $light;
+        left: $pixel * 9;
+        top: $pixel * -1.5;
+
+        &::before {
+          width: $pixel * 3;
+          background: $green-dark;
+          right: $pixel * -3;
+          bottom: $pixel * -1;
+        }
+
+        &::after {
+          width: $pixel * 2;
+          background: $green-light;
+          right: $pixel * -5;
+          bottom: $pixel * -2;
+        }
+      }
+    }
+
     .pet-panda-bamboo {
       position: absolute;
       bottom: 0;
@@ -85,6 +143,6 @@ main.overlay-main {
   #panda {
     flex-grow: 1;
     flex-shrink: 1;
-    margin: 0 3vh 0;
+    margin: 0 2vh;
   }
 }
